[package]
name = "appbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperpom = {path = "../../../hyperpom"}
env_logger = "0.10.0"
log = "0.4.17"
nix = "0.26.2"
mmap-fixed-fixed = "0.1.3"  # lolz
anyhow = "1.0.75"
mach_object = "0.1.17"

[build-dependencies]
bindgen = "0.63.0"
