[package]
name = "appbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
applevisor-sys = "=0.1.1"  # pinned because of u128/Simd<i8, 16> issues
bitfield = "0.13.2"
env_logger = "0.10.0"
hex = "0.4.3"
hyperpom = {git = "https://github.com/kallsyms/hyperpom.git"}
log = "0.4.17"
nix = "0.26.2"
mmap-fixed-fixed = "0.1.3"  # lolz
anyhow = "1.0.75"
mach_object = "0.1.17"
time = "0.3.35"
mio = { version = "0.8", features = ["os-poll", "net"] }

[build-dependencies]
bindgen = "0.63.0"
