[package]
name = "appbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
applevisor = "0.1.2"
applevisor-sys = "0.1.1"
bitfield = "0.13.2"
env_logger = "0.10.0"
hex = "0.4.3"
log = "0.4.17"
nix = "0.26.2"
mmap-fixed-fixed = "0.1.3"                               # lolz
anyhow = "1.0.75"
mach_object = "0.1.17"
time = "0.3.35"
mio = { version = "0.8", features = ["os-poll", "net"] }
rhexdump = "0.1.1"

[dev-dependencies]
clap = "4.5.40"
clap-verbosity-flag = "3.0.3"

[build-dependencies]
bindgen = "0.63.0"
ureq = { version = "2", features = ["tls"] }

[[example]]
name = "gdb_stub"
path = "examples/gdb_stub/src/main.rs"
